--- a/mikro-orm.tsconfig.json
+++ b/mikro-orm.tsconfig.json
@@ -9,6 +9,7 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "target": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
