--- a/package.json
+++ b/package.json
@@ -8,14 +8,28 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./mikro-orm.config.ts"
+    ],
+    "alwaysAllowTs": true,
+    "tsConfigPath": "./mikro-orm.tsconfig.json"
+  },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
     "@farcaster/frame-sdk": "^0.0.35",
+    "@mikro-orm/cli": "^6.4.15",
+    "@mikro-orm/core": "^6.4.15",
+    "@mikro-orm/migrations": "^6.4.15",
+    "@mikro-orm/postgresql": "^6.4.15",
+    "@mikro-orm/reflection": "^6.4.15",
+    "@tanstack/react-query": "^5",
     "@upstash/redis": "^1.34.4",
+    "dotenv": "^16.5.0",
     "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "@tanstack/react-query": "^5",
     "viem": "^2.27.2",
     "wagmi": "^2.14.11"
   },
@@ -29,9 +43,10 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "prettier": "^3.5.3",
     "postcss": "^8",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
