--- a/package.json
+++ b/package.json
@@ -18,18 +18,27 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
+    "@farcaster/core": "^0.16.4",
     "@farcaster/frame-sdk": "^0.0.35",
+    "@farcaster/hub-nodejs": "^0.13.5",
     "@mikro-orm/cli": "^6.4.15",
     "@mikro-orm/core": "^6.4.15",
     "@mikro-orm/migrations": "^6.4.15",
     "@mikro-orm/postgresql": "^6.4.15",
     "@mikro-orm/reflection": "^6.4.15",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-slider": "^1.3.4",
     "@tanstack/react-query": "^5",
     "@upstash/redis": "^1.34.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "lucide-react": "^0.510.0",
     "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.27.2",
     "wagmi": "^2.14.11"
   },
