Switched MikroOrm discovery handler Create challenges/route.ts

--- a/mikro-orm.tsconfig.json
+++ b/mikro-orm.tsconfig.json
@@ -5,6 +5,7 @@
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
+    "declaration": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
