--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build-entities": "node build-entities.js"
   },
   "mikro-orm": {
     "useTsNode": true,
@@ -54,6 +55,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8",
     "prettier": "^3.5.3",
+    "source-map-support": "^0.5.21",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
