--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@farcaster/core": "^0.16.4",
     "@farcaster/frame-sdk": "^0.0.35",
     "@farcaster/hub-nodejs": "^0.13.5",
+    "@heroicons/react": "^2.2.0",
     "@mikro-orm/cli": "^6.4.15",
     "@mikro-orm/core": "^6.4.15",
     "@mikro-orm/migrations": "^6.4.15",
