--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
+    "@farcaster/auth-client": "^0.5.0",
     "@farcaster/core": "^0.16.4",
     "@farcaster/frame-sdk": "^0.0.41",
     "@farcaster/frame-wagmi-connector": "^0.0.30",
