--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.27.2",
