--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@upstash/redis": "^1.34.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.510.0",
     "next": "^14.2.15",
